<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_204sdp"
    android:layout_height="match_parent"
    android:background="@color/trans_black"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_closedrawer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:src="@mipmap/cancel" />


    <TextView
        android:id="@+id/tv_tour_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/tour_list"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sdp" />

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:text="@string/language"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sdp" />


    <TextView
        android:id="@+id/tv_end_tour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:text="@string/end_tour"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sdp"
        android:visibility="visible" />

</LinearLayout>