<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/iv_pckg_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/detail_bg" />

    <View
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp" />

    <TextView
        android:id="@+id/tv_placename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/empty_view"
        android:layout_margin="@dimen/_12sdp"
        android:gravity="center"
        android:text="@string/tour_place_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_26ssp"
        android:textStyle="bold"
        android:visibility="gone" />


    <RelativeLayout
        android:id="@+id/rlDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/drawable_curvebackground"
        android:visibility="visible">


        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_5sdp"
            android:padding="@dimen/_6sdp"
            android:src="@mipmap/cancel" />


        <androidx.core.widget.NestedScrollView
            android:id="@+id/sv_root"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:layout_below="@id/iv_close"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:overScrollMode="never">

            <TextView
                android:id="@+id/tv_placeDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_close"
                android:gravity="left|center"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

        </androidx.core.widget.NestedScrollView>


        <LinearLayout
            android:id="@+id/ll_resources"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sv_root"
            android:layout_marginStart="@dimen/_11sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvTotalVideos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:text=""
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:padding="@dimen/_5sdp"
                android:text="@string/offline_reserve_map"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:text="@string/gps_localitation"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:text="No Roaming Charges"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:text="@string/available_in"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvAvailLang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/ll_resources"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@color/dark_gray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_below="@+id/view"
            android:weightSum="1">


            <TextView
                android:id="@+id/tv_entercode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:background="@drawable/custom_selector"
                android:clickable="true"
                android:gravity="center"
                android:textColor="@color/orange"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                tools:text="@string/enter_code_to_download" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/dark_gray" />

            <TextView
                android:id="@+id/tv_preview"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:background="@drawable/custom_selector"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/preview"
                android:textColor="@color/orange"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />
        </LinearLayout>


    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTourPreviewList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlDescription"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:visibility="gone" />


</RelativeLayout>