<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    tools:context="com.app.tourguide.ui.language.ChooseLanguageFragment">

    <ImageView
        android:id="@+id/iv_choose_lang"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/detail_bg" />


    <TextView
        android:id="@+id/test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="Choose Your Language"
        android:textColor="@color/white"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_lng_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/test"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/choose_the_language"
        android:textColor="@color/white"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_lang"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_lng_title"
        android:layout_margin="@dimen/_14sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/drawable_curvebackground"
        android:paddingTop="@dimen/_5sdp"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/ll_app_lang"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_246sdp"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_14sdp"
        android:background="@drawable/drawable_curvebackground"
        android:orientation="vertical"
        android:visibility="visible"
        android:weightSum="3">


        <LinearLayout
            android:id="@+id/ll_english"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/custom_selector">

            <ImageView
                android:layout_width="@dimen/_44sdp"
                android:layout_height="@dimen/_44sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_12sdp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ukflagnew" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_12sdp"
                android:text="@string/english_lang"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/tv_eng_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:gravity="end"
                android:text="Start"
                android:textColor="@color/sky_blue"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:visibility="invisible" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center|left"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_hebrew"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_selector">

                <ImageView
                    android:layout_width="@dimen/_44sdp"
                    android:layout_height="@dimen/_44sdp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/israel_flag" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:text="@string/hebrew_lang"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/tv_heb_donwload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:gravity="end"
                    android:text="@string/txt_download"
                    android:textColor="@color/sky_blue"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:visibility="invisible" />


            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_gray" />


        <LinearLayout
            android:id="@+id/ll_spanish"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/custom_selector">

            <ImageView
                android:layout_width="@dimen/_44sdp"
                android:layout_height="@dimen/_44sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_12sdp"
                android:scaleType="centerCrop"
                android:src="@mipmap/spain_flag" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_12sdp"
                android:text="@string/spanish_lang"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/tv_spanish_download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:gravity="end"
                android:text="Download"
                android:textColor="@color/sky_blue"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:visibility="invisible" />


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
