<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootVerfication"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bgalert"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#bb000000" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/getpackage_message"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:visibility="invisible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:gravity="center"
                android:text="@string/getpackage_message"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/ifdonthave"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:visibility="invisible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_8sdp"
                android:gravity="center"
                android:text="@string/ifdonthave"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:gravity="center"
                android:layoutDirection="ltr"
                android:orientation="horizontal"
                android:visibility="visible">


                <EditText
                    android:id="@+id/ed1"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:background="@drawable/background_curve"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/ed2"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:background="@drawable/background_curve"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/ed3"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:background="@drawable/background_curve"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/ed4"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:background="@drawable/background_curve"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"

                    />

                <EditText
                    android:id="@+id/ed5"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:background="@drawable/background_curve"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/ed6"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:background="@drawable/background_curve"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/ed7"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:background="@drawable/background_curve"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/ed8"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:background="@drawable/background_curve"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center" />

            </LinearLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/rounded_edit_text"
                android:visibility="invisible" />


            <Button
                android:id="@+id/btn_submit"
                android:layout_width="@dimen/_174sdp"
                android:layout_height="@dimen/_38sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/rounded_edit_text"
                android:text="@string/submit"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </LinearLayout>
    </ScrollView>


    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="@dimen/_22sdp"
        android:layout_height="@dimen/_22sdp"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/_20sdp"
        android:background="@mipmap/cancel"
        android:backgroundTint="@color/white"
        android:padding="@dimen/_10sdp" />


</RelativeLayout>